username align bug-fixed

--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -125,7 +125,6 @@ ul {
 }
 
 .username {
-  float: left;
   font-weight: 700;
   overflow: hidden;
   padding-right: 15px;
